--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.10.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -18,7 +20,13 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.3.1",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0"
   },
   "eslintConfig": {
     "root": true,
